--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=critica
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/peliculas
-spring.datasource.username= root
-spring.datasource.password=Pablopalero1?
+spring.datasource.url=jdbc:mysql://basedatos_mysql:3306/peliculas
+spring.datasource.username=root
+spring.datasource.password=peliculas
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
